--- a/index.html
+++ b/index.html
@@ -65,16 +65,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4 mb-3">
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit maxime eos placeat animi dolore, est, soluta sapiente suscipit exercitationem id vero odio dignissimos corporis! Soluta enim officia atque, commodi possimus,
-              voluptatum ipsum iusto nostrum impedit itaque dignissimos eveniet vero fuga odio ipsa blanditiis, omnis cum nesciunt accusantium inventore doloribus recusandae.
-            </p>
+            <p>I am a student from the faculty of computer science in informatics engineering. Currently I'm taking the 5th semester with a GPA of 3.99. I am interested as an IT engineer, networking, cloud computing and UI / UX.</p>
           </div>
           <div class="col-md-4 mb-3">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit molestiae maxime vero. Incidunt, consequuntur nobis ducimus accusamus fugit fuga aliquid? Ad ea perferendis laboriosam nobis fugiat aliquid dolore officia culpa,
-              facere, eaque nemo. Modi, praesentium hic? Et, architecto odit sed eveniet suscipit maiores rerum similique, modi quis minus ipsam labore.
-            </p>
+            <p>I can work together as a team, easily adapt to new environments, and can learn about new things and I also have public speaking skills that can help in the work I do.</p>
           </div>
         </div>
       </div>
