Ganti Source Profile ke Bucket

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- JumboTron -->
     <section class="jumbotron text-center">
-      <img src="img/shalbi.jpg" alt="Shalbi Addandi" width="200" class="rounded-circle img-thumbnail" />
+      <img src="https://storage.googleapis.com/profiledicoding11/shalbi.jpg" alt="Shalbi Addandi" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Shalbi Addandi</h1>
       <p class="lead">Colage Student | Bangkit Cohort</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
