--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
 
     <!-- JumboTron -->
     <section class="jumbotron text-center">
-      <img src="https://storage.googleapis.com/profiledicoding11/shalbi.jpg" alt="Shalbi Addandi" width="200" class="rounded-circle img-thumbnail" />
+      <img
+        src="https://media.licdn.com/dms/image/D5603AQFxZDchZ7B9xA/profile-displayphoto-shrink_200_200/0/1681118138781?e=1698278400&v=beta&t=El3KrYhrBzkUZHFYReoqQsopATcgFGcfhp6R2_T6qmk"
+        alt="Shalbi Addandi"
+        width="200"
+        class="rounded-circle img-thumbnail"
+      />
       <h1 class="display-4">Shalbi Addandi</h1>
-      <p class="lead">Colage Student | Bangkit Cohort</p>
+      <p class="lead">Colage Student | Intern Employee</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#FFFFFF"
